[library] Updated Guice and resolved the problem with having to open up java/base for guice. thus making #34 obsolete